--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="header-content">
                 <h4 class="header-subtitle" >Hello, I am</h4>
                 <h1 class="header-title">Evanso</h1>
-                <h6 class="header-mono" >Frond end Designer | Developer</h6>
+                <h6 class="header-mono" >Frond end Designer | Software Developer</h6>
                 <h6><span id="boot-icon" class="bi bi-geo-alt" style="font-size: 30px; opacity: 0.6;"></span>KILIFI</h6>
                 <button class="btn btn-primary btn-rounded"><i class="ti-printer pr-2"> <a href="3.txt" download="your_file_name.zip">Download Resume</a></button>
             </div>
